Refactor code base and fixed mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,24 +8,34 @@
     <link rel="stylesheet" href="styles.css">
     <title>Business</title>
 </head>
+
 <body>
     <section>
         <div class="grid-container">
             <div class="container">
-                    <div>
-                        <h1 class="text">Get <b class="b-text">insights</b> that help <br> your business grow.</h1>
-                    <h3 class="small-text">Discover the benefits of data analytics and make <br> better decisions 
+                <div class="container-text">
+                    <h1 class="text">Get <b class="b-text">insights</b> that help <br> your business grow.</h1>
+                    <h3 class="small-text">Discover the benefits of data analytics and make <br> better decisions
                         regarding revenue, customer <br> experience, and overall eficiency</h3>
-                    <h2 class="price">10K+</h2>
-                    <h2 class="number">314</h2>
-                    <h2 class="query">12M+</h2>
-                    <h6 class="company">COMPANIES</h6>
-                    <h6 class="template">TEMPLATES</h6>
-                    <h6 class="queries">QUERIES</h6>
+                    <div class="stats">
+                        <div>
+                            <h2 class="number">10K<small>+</small></h2>
+                            <h6 class="number-text">COMPANIES</h6>
+                        </div>
+                        <div>
+                            <h2 class="number">314</h2>
+                            <h6 class="number-text">TEMPLATES</h6>
+                        </div>
+                        <div>
+                            <h2 class="number">12M<small>+</small></h2>
+                            <h6 class="number-text">QUERIES</h6>
+                        </div>
                     </div>
-                    <aside class="image"></aside>
+                </div>
+                <aside class="image"></aside>
             </div>
         </div>
     </section>
 </body>
+
 </html>
